Test for the project